<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/usage_row_height"
>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_centerVertical="true"
                  android:gravity="center_vertical"
    >
        <ImageView android:id="@+id/app_icon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
        />
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/margin_medium"
                      android:orientation="vertical"
        >

            <TextView
                    android:id="@+id/textview_package_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PackageNameFont"
            />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:id="@+id/textview_launch_count_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_count"
                />

                <TextView
                        android:id="@+id/textview_launch_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />

            </LinearLayout>


            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
            >

                <TextView
                        android:id="@+id/textview_last_time_used_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_time_used"
                />

                <TextView
                        android:id="@+id/textview_last_time_used"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
            >
                <TextView
                        android:id="@+id/textview_total_time_in_foreground_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_time_foreground"
                />

                <TextView
                        android:id="@+id/textview_total_time_in_foreground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View android:id="@+id/divider"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#bbbbbb"/>

</RelativeLayout>